Fix a "flickering" behavior with the menu bar transition animations in Chrome
Summary:
Fixes T13508. The "Notification" and "Messages" icons in the menu bar have a CSS transition animation on hover.

In Chrome, when this element moves up 2px, you can get a flicker in and out of the hover state if the user's cursor is at the very bottom of the element, since the bounding box for the element is rapidly sliding in and out of the area under the cursor.

To fix this: as we move the element up, also make it taller.

Test Plan: In Safari, Chrome, and Firefox: put my cursor at the very bottom of the element, no longer saw any animation flickering.

Maniphest Tasks: T13508

Differential Revision: https://secure.phabricator.com/D21133

--- a/webroot/rsrc/css/application/base/main-menu-view.css
+++ b/webroot/rsrc/css/application/base/main-menu-view.css
@@ -369,6 +369,10 @@ a.phabricator-core-user-menu .caret:before {
 .device-desktop .alert-notifications:hover {
   margin-top: -2px;
   transition-duration: .2s;
+
+  /* See T13508. Avoid animation flickering behavior if the user's cursor is
+     at the very bottom of the element. */
+  padding-bottom: 2px;
 }
 
 .device-desktop .alert-notifications:hover .phui-icon-view {
